# serenity

AK/: Platform.h  PrintfImplementation.h  StackInfo.cpp  StdLibExtraDetails.h
Kernel/API/: Syscall.h
Meta/CMake/: serenity_compile_options.cmake
Meta/Lagom/: CMakeLists.txt
Ports/: .port_include.sh
Ports/AzPainter/: package.sh
Ports/OpenJDK/: package.sh
Ports/Xlib/: package.sh
Ports/atk/: .gitignore  package.sh
Ports/cairo/: cross_file-i686Clang.txt  package.sh
Ports/fribidi/: package.sh
Ports/gdk-pixbuf/: package.sh
Ports/gettext/: package.sh
Ports/glib/: cross_file-i686Clang.txt  cross_file-x86_64Clang.txt
Ports/gtk/: package.sh
Ports/harfbuzz/: .gitignore  package.sh
Ports/inputproto/: package.sh
Ports/kbproto/: package.sh
Ports/libICE/: package.sh
Ports/libSM/: package.sh
Ports/libXau/: package.sh
Ports/libXext/: package.sh
Ports/libXfixes/: package.sh
Ports/libXi/: package.sh
Ports/libXrandr/: package.sh
Ports/libXrender/: package.sh
Ports/libXt/: package.sh
Ports/libXtst/: package.sh
Ports/libepoxy/: package.sh
Ports/pango/: package.sh
Ports/pixman/: cross_file-x86_64Clang.txt  package.sh
Ports/pthread-stubs/: package.sh
Ports/randrproto/: package.sh
Ports/recordproto/: package.sh
Ports/renderproto/: package.sh
Ports/shared-mime-info/: package.sh
Toolchain/: BuildIt.sh
Userland/Libraries/LibXEmulator/: Atom.cpp  Atom.h  CMakeLists.txt  Color.cpp  Color.h  Cursor.cpp  Display.cpp  Drawing.cpp  Drawing.h  Event.cpp  Event.h  Extension.cpp  Extension.h  Font.cpp  Font.h  GC.cpp  Image.cpp  Keyboard.cpp  Lock.h  Macros.cpp  ObjectManager.cpp  ObjectManager.h  Pixmap.cpp  Property.cpp  Property.h  Resource.cpp  Stubs.cpp  Undef.h  Window.cpp  XDrawable.h  XPixmap.cpp  XPixmap.h  XWindow.cpp  XWindow.h
Userland/Libraries/LibXEmulator/xorg/: Context.c  Geom.c  ParseGeom.c  WMGeom.c  Xrm.c
(+103 files in other folders)
